feat: add SystemEnvVariable to load environmental variable